<resources>
    <string name="app_name">Trip Reminder</string>
    <string name="no_trips_string">There are currently no trips in your list. Tap the add icon below to get started!</string>
    <string name="trip_dialog_title">Your trip %s is ready to started!</string>
    <string name="dialog_snooze_button">snooze</string>
    <string name="dialog_start_button">start</string>
    <string name="dialog_cancel_button">cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="TripName">Trip Name</string>
    <string name="startPoint">Start Point</string>
    <string name="endPoint">End Point</string>
    <string name="oneRound">One Round</string>
    <string name="twoRound">Two Round</string>
    <string name="tripType">Trip Type</string>
    <string name="setDate">Set Date</string>
    <string name="setLocation">Set Location</string>
    <string name="setDateandTime"><![CDATA[Set Date&Time]]></string>
    <string name="dateFormat">dd-MMM-yyyy</string>
    <string name="timeFormat">hh:mm a</string>
    <string name="tripNotes">Trip Notes</string>
    <string name="Labtop">My Laptop</string>
    <string name="water">Water Bottle</string>
    <string name="note">Note</string>
    <string name="addTrip">Add Trip</string>
    <string name="cancel">Cancel</string>
    <string name="Email">example@domain.com</string>
    <string name="Password">Password</string>
    <string name="LoginButtonText">Login</string>
    <string name="PastTripsTab">Past Trips</string>
    <string name="MapTapText">Map</string>
    <string name="TripReminderSplashText">Trip Reminder</string>
    <string name="NewUserRegisterText">New User?</string>
    <string name="Name">Name</string>
    <string name="RegisterButtonText">Register</string>
    <string name="ConfirmPasswordHint">Confirm Password</string>
    <string name="login">Login</string>
    <string name="ForgotPasswordText">forgot your password?</string>
    <string name="EmailTextViewValue">Email</string>
    <string name="SignOutButton">Sign out</string>
    <string name="signup">Signup</string>
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        Trip Reminder -> App Permissions and grant access to Get Current Location and Show on other apps.</string>
</resources>
