<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.TripAlertActivity">

    <TextView
        android:id="@+id/trip_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:ellipsize="end"
        android:padding="@dimen/no_trips_margin_32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/trip_dialog_title" />

    <Button
        android:id="@+id/alert_dialog_snooze_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/dialog_snooze_button"
        app:layout_constraintTop_toBottomOf="@id/trip_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <Button
        android:id="@+id/alert_dialog_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/dialog_start_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/trip_dialog_title"
        app:layout_constraintEnd_toStartOf="@id/alert_dialog_cancel_button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/alert_dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/dialog_cancel_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/trip_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp" />

</androidx.constraintlayout.widget.ConstraintLayout>